--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.memoryjogger"
-        minSdkVersion 21
+        applicationId "com.example.memory_jogger"
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
