Created new gameActivity class
I'm working on a few different classes for the main game activity, but will only implement one. Just trying out different methods for things without creating a new project.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".playActivity" />
         <activity android:name=".playActivity2" />
+        <activity android:name=".playActivityTest" />
+        <activity android:name=".GameActivity" />
     </application>
 
 </manifest>
