--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".setHighScoreActivity"></activity>
+        <activity android:name=".endlessPlayActivity"></activity>
+        <activity android:name=".modeSelectActivity" />
+        <activity android:name=".howToPlayActivity" />
+        <activity android:name=".setHighScoreActivity" />
         <activity android:name=".highScoreActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
